<resources>
    <string name="app_name">Piscix</string>
    <string name="title_activity_home">Piscix</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tipo_propietario">Propietario/a</string>
    <string name="title_activity_cliente">ClienteActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_reporte">Reporte</string>
    <string name="tipo_prompt">Tipo de reporte</string>
    <string name="pisicina_prompt">Pisicina</string>
    <string name="title_activity_list_reporte">Historial de reportes</string>
    <string name="title_activity_gallery">Galeria</string>
    <string name="estado_abierto">Abierto</string>
    <string name="estado_cerrado">Cerrado</string>
    <string name="section_format">Hola %d</string>
    <string name="no_photos">Opps parece que no hay fotos</string>
    <string name="title_activity_ruta">Mi ruta</string>
    <string name="title_activity_planilla">Planilla</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_calendar">Actividades</string>
    <string name="title_activity_about">Acerca de</string>
    <string name="icono">Icono</string>
    <string name="actividad_title">Piscina C39, tipo T1</string>
    <string name="actividad_description">1m alto, 1m ancho, 1m largo</string>
    <string name="exile_soluciones">Exile Soluciones</string>
    <string name="date_format">10/10/2016</string>
    <string name="chat_hint">Escribe algo…</string>
    <string name="username_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="send_button">Enviar</string>
    <string name="cliente_name">Jhon Doe</string>
    <string name="cliente_email">john.doe@mail.com</string>
    <string name="cliente_phone">318 393 0939</string>
    <string name="contacts_title">Contactos</string>
    <string name="pools_title">Piscinas</string>
    <string name="houses_title">Casas</string>
    <string name="secondary_text">Secondary text</string>
    <string name="two_line_item">Two-line-item</string>
    <string name="about_title">Piscix</string>
    <string name="cepillado">Cepillado</string>
    <string name="aspirado">Aspirado</string>
    <string name="retrolavado">Retrolavado</string>
    <string name="aumento_de_agua">Aumento de agua</string>
    <string name="aplicaci_n_cloro">Aplicación cloro</string>
    <string name="aplicaci_n_sulfato_al">Aplicación Sulfato Al</string>
    <string name="clasificador_agl">Clasificador AGL</string>
    <string name="disminuci_n_de_ph">Disminución de PH</string>
    <string name="aumento_de_ph">Aumento de PH</string>
    <string name="nivel_ph">Nivel PH</string>
    <string name="nivel_cloro">Nivel Cloro</string>
    <string name="observaciones">Observaciones</string>
    <string name="poner_en_espera">Poner en espera</string>
    <string name="cliente_title">Cliente</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="item">Item</string>
    <string name="subtitle">4,5</string>
    <string name="name_template">John Doe</string>
    <string name="phone_template">3014444070</string>
    <string name="email_template">john.doe@mail.com</string>
    <string name="relate_template">Amigo</string>
    <string name="nav_clientes">Clientes</string>
    <string name="nav_rutas">Rutas</string>
    <string name="nav_reportes">H. Reportes</string>
    <string name="nav_soluciones">H. Soluciones</string>
    <string name="nav_informativos">R. Informativos</string>
    <string name="nav_actividades">Actividades</string>
    <string name="pool_name_template">Piscina 1</string>
    <string name="pool_state_template">Olimpica, En buen estado</string>
    <string name="largo">Largo</string>
    <string name="ancho">Ancho</string>
    <string name="profundidad">Profundidad</string>
    <string name="fecha">Fecha:</string>
    <string name="numero">Numero:</string>
    <string name="cliente">Cliente:</string>
    <string name="fecha_title">Fecha:</string>
    <string name="estado">Estado:</string>
    <string name="piscina">Piscina:</string>
    <string name="tipo">Tipo:</string>
    <string name="cierre">Cierre:</string>
    <string name="descripcion_title">Descripción:</string>
    <string name="fotos">Fotos</string>
    <string name="respuestas">Respuestas</string>
    <string name="solucion">Solucion</string>
    <string name="reporte">Reporte:</string>
    <string name="salida_planilla_nombre">Salida de piscina %1$s</string>
    <string name="salida_planilla_desc">actividad de mantenimiento finalizada en la piscina %1$s del cliente %2$s %3$s</string>
    <string name="loadin_modal_title">Guardando cambios</string>
    <string name="loadin_modal_content">Por favor espere</string>
    <string name="sin_numero">Sin numero</string>
    <string name="piscinero">Piscinero</string>
    <string name="supervisor">Supervisor</string>
    <string name="nav_piscineros">Piscineros</string>
    <string name="piscinas">Piscinas</string>
    <string name="title_activity_piscinas">Asignacion de piscinas</string>
    <string name="piscina_title">Piscina %1$s, Tipo %2$s</string>
    <string name="piscina_medidas">%1$.1fm ancho, %2$.1fm largo, %3$.1fm alto</string>
    <string name="success_response">operación realizada con exito</string>
    <string name="title_activity_ruta_p">Ruta Piscinero</string>
    <string name="title_activity_map_ruta">Mapa de ruta</string>
    <string name="title_activity_notification">Notificaciones</string>
    <string name="title_activity_alarm">Recordatorios</string>
    <string name="title_activity_map_casa">Ubicacion piscina</string>
    <string name="buscar">Buscar aquí</string>
    <string name="error_response">Error al enviar los datos</string>
</resources>