<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_planilla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.com.exile.piscix.PlanillaActivity"
    tools:showIn="@layout/activity_planilla">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <CheckBox
                android:id="@+id/cepillado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cepillado" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <CheckBox
                android:id="@+id/aspirado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aspirado" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <CheckBox
                android:id="@+id/retrolavado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retrolavado" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <CheckBox
                android:id="@+id/aumento_agua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aumento_de_agua" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <CheckBox
                android:id="@+id/aplicacion_cloro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aplicaci_n_cloro" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <CheckBox
                android:id="@+id/aplicacion_sulfato_al"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aplicaci_n_sulfato_al" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <CheckBox
                android:id="@+id/clasificador_agl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificador_agl" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/disminucion_ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disminuci_n_de_ph" />

            <RadioButton
                android:id="@+id/aumento_ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/aumento_de_ph" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nivel_cloro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nivel_cloro"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nivel_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nivel_ph"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/observaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/observaciones"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <CheckBox
                android:id="@+id/espera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poner_en_espera" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
