<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="128dp"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/ic_person"
            android:contentDescription="@string/icono" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:text="@string/item"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/subtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="12sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>