<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_reporte"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.com.exile.piscix.ReporteActivity"
    tools:showIn="@layout/activity_reporte">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cliente_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cliente_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nombre_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="textAutoComplete" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/descripcion_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/tipo_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                style="style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_prompt" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/tipo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:ms_arrowSize="16dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/piscina_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                style="style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pisicina_prompt" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/piscina"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:ms_arrowSize="16dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>