<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/pedido_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/icono"
            android:scaleType="centerInside"
            android:src="@drawable/ic_account_circle" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/two_line_item"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cliente_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/secondary_text"
                android:textSize="13sp"
                android:visibility="visible" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentEnd="true"
            android:padding="16dp">

            <ImageView
                android:id="@+id/check_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/icono"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_info"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>