<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:clickable="true"
            android:padding="16dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/icono"
                android:src="@drawable/ic_account_circle" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:background="@drawable/border_set">

            <LinearLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="72dp"
                android:animateLayoutChanges="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@string/name_template"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:textSize="13sp"
                    android:visibility="visible" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_alignParentEnd="true"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/drop_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/icono"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_keyboard_arrow_down" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/button_numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/numero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_phone24dp"
                        android:gravity="start|center"
                        android:text="@string/phone_template"
                        android:textColor="@android:color/holo_blue_bright" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_email_24dp"
                    android:gravity="start|center"
                    android:text="@string/email_template" />

                <TextView
                    android:id="@+id/cumple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_cake_24dp"
                    android:gravity="start|center"
                    android:text="@string/date_format" />

                <TextView
                    android:id="@+id/direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_home_24dp"
                    android:gravity="start|center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="8dp">

                    <Button
                        android:id="@+id/green_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_direction_36dp"
                        android:text="@string/title_activity_ruta"
                        android:theme="@style/AppTheme.GreenButton" />

                    <Button
                        android:id="@+id/teal_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_pool_36dp"
                        android:text="@string/piscinas"
                        android:theme="@style/AppTheme.TealButton" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorTransparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp" />
</RelativeLayout>